--- a/module-1/lab-df-calculation-and-transformation/your-code/challenge-1.ipynb
+++ b/module-1/lab-df-calculation-and-transformation/your-code/challenge-1.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 336,
+   "execution_count": 354,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 337,
+   "execution_count": 355,
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 338,
+   "execution_count": 356,
    "metadata": {},
    "outputs": [
     {
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 339,
+   "execution_count": 357,
    "metadata": {},
    "outputs": [
     {
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 340,
+   "execution_count": 358,
    "metadata": {},
    "outputs": [
     {
@@ -666,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 341,
+   "execution_count": 359,
    "metadata": {},
    "outputs": [
     {
@@ -832,7 +832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 342,
+   "execution_count": 360,
    "metadata": {},
    "outputs": [
     {
@@ -861,7 +861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 343,
+   "execution_count": 361,
    "metadata": {},
    "outputs": [
     {
@@ -896,7 +896,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 344,
+   "execution_count": 362,
    "metadata": {},
    "outputs": [
     {
@@ -910,7 +910,7 @@
        "Name: Combo Type, dtype: object"
       ]
      },
-     "execution_count": 344,
+     "execution_count": 362,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -931,7 +931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 349,
+   "execution_count": 363,
    "metadata": {},
    "outputs": [
     {
@@ -1103,14 +1103,14 @@
        "5     80           1      False   1.103448           NaN  "
       ]
      },
-     "execution_count": 349,
+     "execution_count": 363,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "pokemon[\"A/D Ratio\"].sort_values( axis=0, ascending=False, inplace=False, kind='quicksort', na_position='last')\n",
-    "pokemon.head(6)"
+    "pokemon.head(6)   "
    ]
   },
   {
@@ -1124,12 +1124,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 366,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    Grass-Poison\n",
+       "1    Grass-Poison\n",
+       "2    Grass-Poison\n",
+       "3    Grass-Poison\n",
+       "4            Fire\n",
+       "5            Fire\n",
+       "Name: Combo Type, dtype: object"
+      ]
+     },
+     "execution_count": 366,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# your code here\n",
-    "n[[\"Make\",\"Cylinders\"]].groupby(\"Make\").agg(['mean',\"max\",\"min\"])"
+    "pokemon[[\"Name\",\"A/D Ratio\", \"Combo Type\"]]\n",
+    "pokemon[\"Combo Type\"].fillna(value=pokemon[\"Type 1\"]).head(6)\n"
    ]
   },
   {
@@ -1145,12 +1163,186 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 369,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr:last-of-type th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th>#</th>\n",
+       "      <th>Total</th>\n",
+       "      <th>HP</th>\n",
+       "      <th>Attack</th>\n",
+       "      <th>Defense</th>\n",
+       "      <th>Sp. Atk</th>\n",
+       "      <th>Sp. Def</th>\n",
+       "      <th>Speed</th>\n",
+       "      <th>Generation</th>\n",
+       "      <th>Legendary</th>\n",
+       "      <th>A/D Ratio</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th>mean</th>\n",
+       "      <th>mean</th>\n",
+       "      <th>mean</th>\n",
+       "      <th>mean</th>\n",
+       "      <th>mean</th>\n",
+       "      <th>mean</th>\n",
+       "      <th>mean</th>\n",
+       "      <th>mean</th>\n",
+       "      <th>mean</th>\n",
+       "      <th>mean</th>\n",
+       "      <th>mean</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Combo Type</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Bug-Electric</th>\n",
+       "      <td>595.500000</td>\n",
+       "      <td>395.5</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>62.000000</td>\n",
+       "      <td>55.000000</td>\n",
+       "      <td>77.000000</td>\n",
+       "      <td>55.000000</td>\n",
+       "      <td>86.500000</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.111667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Bug-Fighting</th>\n",
+       "      <td>214.000000</td>\n",
+       "      <td>550.0</td>\n",
+       "      <td>80.0</td>\n",
+       "      <td>155.000000</td>\n",
+       "      <td>95.000000</td>\n",
+       "      <td>40.000000</td>\n",
+       "      <td>100.000000</td>\n",
+       "      <td>80.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.637681</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Bug-Fire</th>\n",
+       "      <td>636.500000</td>\n",
+       "      <td>455.0</td>\n",
+       "      <td>70.0</td>\n",
+       "      <td>72.500000</td>\n",
+       "      <td>60.000000</td>\n",
+       "      <td>92.500000</td>\n",
+       "      <td>80.000000</td>\n",
+       "      <td>80.000000</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.234266</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Bug-Flying</th>\n",
+       "      <td>286.285714</td>\n",
+       "      <td>419.5</td>\n",
+       "      <td>63.0</td>\n",
+       "      <td>70.142857</td>\n",
+       "      <td>61.571429</td>\n",
+       "      <td>72.857143</td>\n",
+       "      <td>69.071429</td>\n",
+       "      <td>82.857143</td>\n",
+       "      <td>2.857143</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.146274</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Bug-Ghost</th>\n",
+       "      <td>292.000000</td>\n",
+       "      <td>236.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>90.000000</td>\n",
+       "      <td>45.000000</td>\n",
+       "      <td>30.000000</td>\n",
+       "      <td>30.000000</td>\n",
+       "      <td>40.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                       #  Total    HP      Attack    Defense    Sp. Atk  \\\n",
+       "                    mean   mean  mean        mean       mean       mean   \n",
+       "Combo Type                                                                \n",
+       "Bug-Electric  595.500000  395.5  60.0   62.000000  55.000000  77.000000   \n",
+       "Bug-Fighting  214.000000  550.0  80.0  155.000000  95.000000  40.000000   \n",
+       "Bug-Fire      636.500000  455.0  70.0   72.500000  60.000000  92.500000   \n",
+       "Bug-Flying    286.285714  419.5  63.0   70.142857  61.571429  72.857143   \n",
+       "Bug-Ghost     292.000000  236.0   1.0   90.000000  45.000000  30.000000   \n",
+       "\n",
+       "                 Sp. Def      Speed Generation Legendary A/D Ratio  \n",
+       "                    mean       mean       mean      mean      mean  \n",
+       "Combo Type                                                          \n",
+       "Bug-Electric   55.000000  86.500000   5.000000       0.0  1.111667  \n",
+       "Bug-Fighting  100.000000  80.000000   2.000000       0.0  1.637681  \n",
+       "Bug-Fire       80.000000  80.000000   5.000000       0.0  1.234266  \n",
+       "Bug-Flying     69.071429  82.857143   2.857143       0.0  1.146274  \n",
+       "Bug-Ghost      30.000000  40.000000   3.000000       0.0  2.000000  "
+      ]
+     },
+     "execution_count": 369,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# your code here\n",
+    "pokemon.groupby(\"Combo Type\").agg(['mean']).head()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# your code here"
-   ]
+   "source": []
   }
  ],
  "metadata": {
